--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=backend
 
 # Import .env file
-spring.config.import=file:.env[.properties]
+spring.config.import=optional:file:.env[.properties]
 
 # DB
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
