--- a/.github/workflows/dev-integration.yml
+++ b/.github/workflows/dev-integration.yml
@@ -19,20 +19,17 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
 
+    - name: Grant permission for gradlew
+      run: chmod +x ./gradlew
+
     - name: Build with Gradle Wrapper
       run: ./gradlew clean build
 
-    - name: generate .env
-      run: echo "${{ secrets.DEV_ENV }}" > .env
-
-    - name: Build Docker Image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/${{secrets.DOCKER_DEV_REPO}}:latest .
-
-    - name: Docker Login
-      run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-
-    - name: Push Docker Image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_DEV_REPO }}:latest
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: hanjari-dev
+        path: build/libs/*.jar
 
   dependency-submission:
 
