--- a/.github/workflows/dev-integration.yml
+++ b/.github/workflows/dev-integration.yml
@@ -23,7 +23,7 @@ jobs:
       run: chmod +x ./gradlew
 
     - name: Build with Gradle Wrapper
-      run: ./gradlew clean build
+      run: ./gradlew clean build -x test
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
