:construction_worker: CI/CD: trigger workflow명 수정 - #2

--- a/.github/workflows/dev-deployment.yml
+++ b/.github/workflows/dev-deployment.yml
@@ -2,7 +2,7 @@ name: Dev Deployment
 
 on:
   workflow_run:
-    workflows: ["Dev-Integration"]
+    workflows: ["Dev Integration"]
     types:
       - completed
     
