--- a/.github/workflows/dev-cicd.yml
+++ b/.github/workflows/dev-cicd.yml
@@ -1,14 +1,39 @@
-name: Dev Deployment
+name: Dev CI/CD
 
 on:
-  workflow_run:
-    workflows: ["Dev Integration"]
-    types:
-      - completed
-    
+  push:
+    branches: [ "develop" ]
+
 jobs:
-  deploy:
-  
+  integration:
+
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        java-version: '21'
+        distribution: 'temurin'
+
+    - name: Grant permission for gradlew
+      run: chmod +x ./gradlew
+
+    - name: Build with Gradle Wrapper
+      run: ./gradlew clean build -x test
+
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: hanjari-dev
+        path: build/libs/*.jar
+        retention-days: 1
+
+  deployment:
+
     runs-on: ubuntu-latest
 
     steps:
@@ -41,7 +66,7 @@ jobs:
           key: ${{ secrets.DEV_SSH_PRIVATE_KEY }}
           source: ".env,mysql.env,docker-compose.yml"
           target: ${{ secrets.DEV_EC2_PROJECT_PATH }}
-        
+
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v1.2.0
         with:
@@ -54,4 +79,15 @@ jobs:
             docker compose down
             docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_DEV_REPO }}:latest
             docker compose up -d
-            
+
+  dependency-submission:
+
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Generate and submit dependency graph
+      uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
