:construction_worker: CI/CD: 아티팩트 다운 후 디렉토리 이동 - #2

--- a/.github/workflows/dev-cicd.yml
+++ b/.github/workflows/dev-cicd.yml
@@ -44,6 +44,9 @@ jobs:
         with:
           name: hanjari-dev
 
+      - name: Move Artifact
+        run: mv hanjari-dev/.jar ./
+
       - name: Generate .env
         run: |
           echo "${{ secrets.DEV_ENV }}" > .env
