:pencil2: Fix: 빠뜨린 와일드카드 추가2 - #2

--- a/.github/workflows/dev-cicd.yml
+++ b/.github/workflows/dev-cicd.yml
@@ -45,7 +45,7 @@ jobs:
           name: hanjari-dev
 
       - name: Move Artifact
-        run: mv hanjari-dev/*.jar ./
+        run: mv hanjari-dev/**/*.jar ./
 
       - name: Generate .env
         run: |
