--- a/.github/workflows/dev-cicd.yml
+++ b/.github/workflows/dev-cicd.yml
@@ -45,7 +45,7 @@ jobs:
           name: hanjari-dev
 
       - name: Move Artifact
-        run: mv hanjari-dev/**/*.jar ./
+        run: mv *.jar build/libs/
 
       - name: Generate .env
         run: |
