:pencil2: Fix: 디렉토리 생성 추가 - #2

--- a/.github/workflows/dev-cicd.yml
+++ b/.github/workflows/dev-cicd.yml
@@ -45,7 +45,9 @@ jobs:
           name: hanjari-dev
 
       - name: Move Artifact
-        run: mv *.jar build/libs/
+        run: |
+          mkdir -p build/libs/
+          mv *.jar build/libs/
 
       - name: Generate .env
         run: |
