--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.jdbc.batch_size=100
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
+
+jwt.secret-key=${JWT_SECRET_KEY}
+jwt.expiration-time=${JWT_EXPIRATION_TIME} 
