--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,11 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.jdbc.batch_size=100
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
+
+# AWS
+spring.cloud.aws.credentials.access-key=${AWS_ACCESS_KEY}
+spring.cloud.aws.credentials.secret-key=${AWS_SECRET_KEY}
+spring.cloud.aws.region.static=${AWS_REGION}
+
+# S3
+spring.cloud.aws.s3.bucket=${S3_BUCKET_NAME}
