:sparkles: Feature: Redis 설정 클래스 생성  - #11

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,8 @@ spring.jpa.properties.hibernate.jdbc.batch_size=100
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
 
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
+
 jwt.secret-key=${JWT_SECRET_KEY}
 jwt.expiration-time=${JWT_EXPIRATION_TIME} 
