✨ Feature: 총동연 및 서비스 관리자 관련 로직 추가 - #27

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,4 +31,11 @@ spring.data.redis.port=${REDIS_PORT}
 
 # JWT
 jwt.secret-key=${JWT_SECRET_KEY}
+jwt.secret.admin=${JWT_ADMIN_SECRET}
+jwt.secret.service-admin=${JWT_SERVICE_ADMIN_SECRET}
+
 jwt.expiration-time=${JWT_EXPIRATION_TIME}
+
+# Admin
+service.admin=${SERVICE_ADMIN}
+admin=${ADMIN}
