✨ Feature: 로그아웃 로직 JwtTokenProvider 클래스로 이동 - #27

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,7 @@ spring.data.redis.port=${REDIS_PORT}
 jwt.secret-key=${JWT_SECRET_KEY}
 jwt.secret.admin=${JWT_ADMIN_SECRET}
 jwt.secret.service-admin=${JWT_SERVICE_ADMIN_SECRET}
+jwt.blacklist-key=${JWT_BLACKLIST_KEY}
 
 jwt.expiration-time=${JWT_EXPIRATION_TIME}
 
