--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.cloud.aws.region.static=${AWS_REGION}
 
 # S3
 spring.cloud.aws.s3.bucket=${S3_BUCKET_NAME}
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # Redis
 spring.data.redis.host=${REDIS_HOST}
