--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,9 @@ spring.cloud.aws.region.static=${AWS_REGION}
 spring.cloud.aws.s3.bucket=${S3_BUCKET_NAME}
 spring.jpa.hibernate.ddl-auto=update
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 # Redis
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
