--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.application.name=backend
 # Import .env file
 spring.config.import=optional:file:.env[.properties]
 
+# Profile Setting
+spring.profiles.active=${PROFILE}
+
 # DB
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=${MYSQL_URL}
@@ -40,4 +43,4 @@ jwt.expiration-time=${JWT_EXPIRATION_TIME}
 
 # Admin
 service.admin=${SERVICE_ADMIN}
-admin=${ADMIN}
+union.admin=${UNION_ADMIN}
