--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,6 @@ spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=${JPA_DDL}
 
 # AWS
-spring.cloud.aws.credentials.access-key=${AWS_ACCESS_KEY}
-spring.cloud.aws.credentials.secret-key=${AWS_SECRET_KEY}
 spring.cloud.aws.region.static=${AWS_REGION}
 
 # S3
@@ -38,9 +36,8 @@ spring.data.redis.port=${REDIS_PORT}
 # JWT
 jwt.secret-key=${JWT_SECRET_KEY}
 jwt.blacklist-key=${JWT_BLACKLIST_KEY}
-
 jwt.expiration-time=${JWT_EXPIRATION_TIME}
 
-# Admin
+# Admin Code
 service.admin=${SERVICE_ADMIN}
 union.admin=${UNION_ADMIN}
