--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,7 @@ spring.cloud.aws.region.static=${AWS_REGION}
 # S3
 spring.cloud.aws.s3.bucket=${S3_BUCKET_NAME}
 
+# Multipart
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
