--- a/dev-docker-compose.yml
+++ b/dev-docker-compose.yml
@@ -38,8 +38,8 @@ services:
     volumes:
       - ~/hanjari/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ~/hanjari/nginx/conf.d:/etc/nginx/conf.d
-      - /etc/letsencrypt/live/hanjari-dev.site/fullchain.pem:/etc/nginx/ssl/fullchain.pem:ro
-      - /etc/letsencrypt/live/hanjari-dev.site/privkey.pem:/etc/nginx/ssl/privkey.pem:ro
+      - /etc/letsencrypt/live/dev.backend.hanjari.site/fullchain.pem:/etc/nginx/ssl/fullchain.pem:ro
+      - /etc/letsencrypt/live/dev.backend.hanjari.site/privkey.pem:/etc/nginx/ssl/privkey.pem:ro
     networks:
       - dev-db-network
     depends_on:
