--- a/prod-docker-compose.yml
+++ b/prod-docker-compose.yml
@@ -22,8 +22,8 @@ services:
     volumes:
       - ~/hanjari/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ~/hanjari/nginx/conf.d:/etc/nginx/conf.d
-      - /etc/letsencrypt/live/hanjari-prod.site/fullchain.pem:/etc/nginx/ssl/fullchain.pem:ro
-      - /etc/letsencrypt/live/hanjari-prod.site/privkey.pem:/etc/nginx/ssl/privkey.pem:ro
+      - /etc/letsencrypt/live/prod.backend.hanjari.site/fullchain.pem:/etc/nginx/ssl/fullchain.pem:ro
+      - /etc/letsencrypt/live/prod.backend.hanjari.site/privkey.pem:/etc/nginx/ssl/privkey.pem:ro
     networks:
       - hanjari-network
     depends_on:
