--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,6 @@
 # Disable Swagger
 springdoc.swagger-ui.enabled=false
 
-# SQL Query
+# JPA
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=false
