feat: docker-compose.yml nginx 제거 및 로그 경로 명시

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,3 +4,10 @@ springdoc.swagger-ui.enabled=false
 # JPA
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=false
+
+# Actuator
+management.endpoints.web.exposure.include=prometheus,health,info
+management.metrics.tags.application=hanjari
+
+# Log
+logging.file.name=/var/log/hanjari.log
