feat: SSL 충돌로 인한 properties 파일 내 ssl 옵션 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,3 +53,7 @@ jwt.expiration-time=${JWT_EXPIRATION_TIME}
 # Admin Code
 service.admin=${SERVICE_ADMIN}
 union.admin=${UNION_ADMIN}
+
+# SSL
+server.port=8080
+server.ssl.enabled=false
