--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,9 @@ dependencies {
     annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+    // selenium
+    implementation 'org.seleniumhq.selenium:selenium-java:4.38.0'
 }
 
 tasks.named('test') {
