feat: selenium docker로 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,4 +58,7 @@ union.admin=${UNION_ADMIN}
 server.port=8080
 server.ssl.enabled=false
 
+# SELENIUM
+selenium.url=${SELENIUM_URL}
+
 slack.webhook-url=${SLACK_WEBHOOK_URL}
