chore: AI 관련 파일 깃 추적 중단

--- a/.gitignore
+++ b/.gitignore
@@ -178,4 +178,7 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
+AGENTS.md
+CLAUDE.md
+
 # End of https://www.toptal.com/developers/gitignore/api/java,gradle,macos,intellij+all
