--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,6 +59,6 @@ server.port=8080
 server.ssl.enabled=false
 
 # SELENIUM
-selenium.url=${SELENIUM_URL}
+#selenium.url=${SELENIUM_URL}
 
 slack.webhook-url=${SLACK_WEBHOOK_URL}
